--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "<Application Name>",
-  "short_name": "<Application Short Name >",
+  "name": "PwaBox",
+  "short_name": "PB",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
-  "scope": "/index.html",
-  "start_url": "/index.html",
+  "scope": "./",
+  "start_url": "./",
   "icons": [
      {
       "src": "assets/icons/favicon/icon-48x48.png",
