--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "<Application Name>",
-  "short_name": "<Application Short Name >",
+  "name": "PwaBox",
+  "short_name": "PB",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
